# repvis

./: .gitignore  .jahns-workflow.yml  CLAUDE.md  PROGRESS.md  README.md  ROADMAP.md  convert_vjepa21_to_hf.py  pyproject.toml  run.sh  tasks.yaml
docs/adr/: ADR-0000-adopt-jahns-workflow.md  ADR-0001-sam2-foreground-segmentation.md
docs/reviews/: 2026-07-07-review-fixes-feedback.md  2026-07-07-review-fixes-request.md  2026-07-07-sam2-foreground-feedback.md  2026-07-07-sam2-foreground-request.md  2026-07-08-backlog-zero-feedback.md  2026-07-08-backlog-zero-request.md  2026-07-08-parallel-sweep-feedback.md  2026-07-08-parallel-sweep-request.md  2026-07-10-router-refuted-feedback.md  2026-07-10-router-refuted-request.md
docs/spikes/: fp8-attention.md
repvis/: __init__.py  config.py  extract.py  modelload.py  pca.py  pipeline.py  sam.py  server.py  video_io.py
scripts/: bench_backbone.py  fetch_vjepa21.sh  fp8_fidelity.py  fp8_gate_dinov2.py
src/vjepa21_hf/: __init__.py  configuration_vjepa21.py  modeling_vjepa21.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_autoseed.py  test_feats_writer.py  test_frame_alignment.py  test_pca.py
